Fix style breaks on chrome, add proper description in index.html

--- a/evcs-app/src/App.css
+++ b/evcs-app/src/App.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden -moz-hidden-unscrollable;
+  overflow: hidden;
 }
 
 .App {
